[project]
name = "med-edge-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ijson>=3.4.0.post0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "medspacy>=1.3.1",
    "numpy<2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tqdm>=4.67.1",
    "aim>=3.27.0",
]
